table scrolling issues fixed with z-index adjustment

--- a/app/plants/static/plants/css/style.css
+++ b/app/plants/static/plants/css/style.css
@@ -682,7 +682,7 @@ img
     text-align:       left;
     vertical-align:   top;
     background-color: lightgray;
-    z-index:          10;          /* Ensure table headers are above table body data */
+    z-index:          30;          /* Ensure table headers are above table body data */
 }
 .bnd-table th:first-child     {padding-left:16px}
 .bnd-table tr                 {border-bottom:1px solid #ddd}
